added play/stop animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlPz-ZPQjYceZvOJInQzWbIHB2EkRWDJY&sensor=false"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script type="text/javascript" src="streetviewgrabber.js"></script>
@@ -51,7 +52,7 @@
         </div>
     </div>
     <div id="tutorial">
-        <h1>Scroll down to view images</h1>
+        <h1>Scroll down to view images or click <a href="#" class="play">play</a></h1>
         <br>
         <br>
         <br>
@@ -159,6 +160,7 @@
             <div id="pano-display"></div>
         </div>
         <div id="trackerbar">
+            <a href="#" class="play">play</a>
             <div class="line-visible"></div>
             <div class="actual-line">
                 <div class="tracker"></div>
